kubernetes/apps/network/unifi/app/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  type: ExternalName
  externalName: 192.168.1.1
  ports:
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: network-unifi-transport@kubernetescrd
spec:
  ingressClassName: internal
  rules:
    - host: unifi.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 443
